# cliq-nostr-terminal

./: .gitignore  CMakeLists.txt  README.md  ToDo.md
code/: main.cpp
src/: main.cpp
